# thermal_frame_normalizer

./: .gitignore  README.md  pyproject.toml  run.py  СПРАВОЧНИК_ПО_МЕТОДАМ.md  вычитание_фона.json
.github/workflows/: build.yml
docs/: architecture.md
src/image_illumination_corrector/: __init__.py  __main__.py
thermal_frame_normalizer/: __init__.py  __main__.py  app.py  batch.py  models.py  presets.py  processing.py  processing_core.py  ui.py
