[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-frame-normalizer"
version = "0.1.0"
description = "Interactive tool for tuning vignette and illumination correction on thermal frames."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
]

[project.scripts]
thermal-frame-normalizer = "thermal_frame_normalizer.app:main"

[tool.setuptools.packages.find]
include = ["thermal_frame_normalizer*"]

[dependency-groups]
dev = [
    "pyinstaller (>=6.19.0,<7.0.0)"
]
