[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-illumination-corrector"
version = "0.1.0"
description = "Interactive desktop tool for vignette reduction and image illumination correction."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
]

[project.scripts]
image-illumination-corrector = "image_illumination_corrector.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_illumination_corrector*"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pyinstaller (>=6.19.0,<7.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
